<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity"
    android:background="@color/colorSecondary">
    <FrameLayout
        android:id="@+id/frame_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/frame_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/gray_800"
            android:fontFamily="@font/poppins_bold"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"/>
        <ImageView
            android:background="@color/shimmerColor"
            android:id="@+id/previewImage"
            android:layout_width="match_parent"
            android:layout_height="226dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/image_capture"
            android:scaleType="fitCenter" />
        <LinearLayout
            android:textColor="#5D4037"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_take_photo"
                    android:textColor="@color/colorSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:enabled="true"
                    android:background="@color/red_300"
                    android:padding="@dimen/spacing_medium"
                    android:textSize="@dimen/spacing_middle"
                    android:layout_margin="10dp"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/take_photo"
                    tools:ignore="SpUsage" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_opened_galery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:enabled="true"
                    android:layout_marginTop="10dp"
                    android:padding="@dimen/spacing_medium"
                    android:textAlignment="center"
                    android:textSize="@dimen/spacing_middle"
                    android:background="@color/red_300"
                    android:textColor="@color/colorSecondary"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/take_from_gallery"
                    tools:ignore="SpUsage" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/spacing_medium">

                <androidx.appcompat.widget.AppCompatButton
                    android:padding="@dimen/spacing_medium"
                    android:layout_marginHorizontal="10dp"
                    android:id="@+id/btn_upload"
                    android:textSize="@dimen/spacing_middle"
                    android:textAlignment="center"
                    android:textColor="@color/colorSecondary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:elevation="@dimen/spacing_medium"
                    android:background="@color/red_300"
                    android:enabled="true"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/process_upload_image"
                    android:textColorHint="@color/gray_600"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_500"
                    android:fontFamily="@font/poppins_bold"
                    android:textAlignment="center"
                    android:paddingVertical="20dp"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="@string/copyright_text_hint"
                    tools:ignore="RtlCompat" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>